package com.homework4.homework;
import java.lang.Math;

public class SolveTheNextTask {

     float first =  1.07f;
     float second = 2.89f;
     float third = -2.3f;

     int a = 4;
     int b = 3;
     int c = 89;

     int smallest = Math.min(a, Math.min(b, c));
     int biggest = Math.max(a, Math.max(b, c));

}
     /*
      * read number of HTTP Error (400, 401,402, ...)
      * and write the name of this error (Declare enum HTTPError)
      */

