@startuml

title __HOMEWORK4's Class Diagram__\n

  namespace com.homework4 {
    class com.homework4.Dog {
        - age : int
        - breed : String
        - name : String
        + getAge()
        + getBreed()
        + getName()
        + getOldestDog()
        + getUniName()
        + setAge()
        + setBreed()
        + setName()
        ~ Dog()
    }
  }
  

  namespace com.homework4 {
    enum breed {
      AmericanGang
      AustralianTerrier
      IrishWolfhound
      RoughFoxTerrier
    }
  }
  

  namespace com.homework4 {
    class com.homework4.Main {
    }
  }
  

  namespace com.homework4 {
    class com.homework4.SolveTheNextTask {
        ~ a : int
        ~ b : int
        ~ biggest : int
        ~ c : int
        ~ first : float
        ~ second : float
        ~ smallest : int
        ~ third : float
    }
  }
  

  com.homework4.Dog +-down- com.homework4.Dog.breed
  com.homework4.Main o-- com.homework4.Dog : firstDog
  com.homework4.Main o-- com.homework4.Dog : secondDog
  com.homework4.Main o-- com.homework4.Dog : thirdDog


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
